Fix background image opacity to make it more readable

--- a/apps/web/less/style.less
+++ b/apps/web/less/style.less
@@ -17,9 +17,22 @@ body {
 }
 
 #back-image {
-  background-image: url("/img/banner.jpg");
+  position: relative;
+}
+
+#back-image:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("/img/banner.jpg"); 
   background-repeat: no-repeat;
   background-size: 100%;
+  width: 100%;
+  height: 100%;
+  opacity : 0.7;
+  z-index: -1;
 }
 
 .main-container {
